# 3DModelView

./: CMakeLists.txt  Makefile  modelloader
includes/: 42run.hpp  Camera.class.hpp  Game.class.hpp  GameObject.class.hpp  Graphic.class.hpp  InputManager.class.hpp  Mesh.class.hpp  Model.class.hpp  Shader.class.hpp  TextManager.class.hpp  TimeManager.class.hpp  Transform.class.hpp  general.hpp
shaders/: Shader.fragment  Shader.vertex
srcs/: Camera.class.cpp  Game.class.cpp  GameObject.class.cpp  Graphic.class.cpp  InputManager.class.cpp  Model.class.cpp  Shader.class.cpp  TimeManager.class.cpp  Transform.class.cpp
